@@ -76,6 +76,7 @@ require 'lobbyist/v2/appointment'
 require 'lobbyist/v2/authorization'
 require 'lobbyist/v2/category'
 require 'lobbyist/v2/company_metrics'
+require 'lobbyist/v2/company_place'
 require 'lobbyist/v2/company_setting'
 require 'lobbyist/v2/company_subscription'
 require 'lobbyist/v2/company_transaction'
