@@ -1,3 +1,5 @@
+* Added CompanyPlace proxy model for V2.
+
 === 0.5.11 2014-07-10
 
 * SocialNetworkPage proxy model added for V2.
